main: done TODO: check enemy and background

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="silksoar_main">SILKSOAR</string>
     <string name="btn_start">START</string>
     <string name="btn_about">ABOUT</string>
+    <string name="back">Back</string>
+    <string name="game_over">Game Over!</string>
 </resources>
